# poetry2nix-issue2

./: .envrc  README.md  flake.nix  hello.py  pyproject.toml
