[tool.poetry]
name = "hello"
version = "0.1.0"
description = "reproducing some weirdness"
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.272"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hello = "hello:main"
